[gd_scene load_steps=2 format=3 uid="uid://bdivkjo81dx80"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_gmphr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmphr")

[node name="BackgroundColor" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "100 Questions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 70
text = "Start"

[node name="AddBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Add"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/StartBtn" to="." method="_on_start_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/AddBtn" to="." method="_on_add_button_down"]
